force-app/main/default/objects/Fix_Price__c/Fix_Price__c.object-meta.xml
<CustomObject>
    <label>Fix Price</label>
    <nameField>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fix Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>