force-app/main/default/objects/Fix_Price__c/fields/Price_From__c.field-meta.xml
<CustomField>
    <fullName>Price_From__c</fullName>
    <label>Price From</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>