force-app/main/default/objects/Fix_Price__c/fields/Price_Message__c.field-meta.xml
<CustomField>
    <fullName>Price_Message__c</fullName>
    <label>Price Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>