force-app/main/default/objects/Fix_Price__c/fields/Price_Text__c.field-meta.xml
<CustomField>
    <fullName>Price_Text__c</fullName>
    <label>Price Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>