force-app/main/default/objects/Fix_Price__c/fields/Price_To__c.field-meta.xml
<CustomField>
    <fullName>Price_To__c</fullName>
    <label>Price To</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>